// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App lifecycle > install app > should not delete an existing app-data folder even if the app is reinstalled 1`] = `
"/
├─ app-data/
│  └─ test/
│     └─ test2/
│        ├─ app.env
│        └─ data/
│           └─ test.txt
└─ data/
   ├─ .env
   ├─ apps/
   │  └─ test/
   │     └─ test2/
   │        ├─ config.json
   │        ├─ data/
   │        ├─ docker-compose.generated.yml
   │        ├─ docker-compose.json
   │        └─ metadata/
   │           └─ description.md
   ├─ backups/
   ├─ repos/
   │  └─ test/
   │     └─ apps/
   │        └─ test2/
   │           ├─ config.json
   │           ├─ data/
   │           ├─ docker-compose.json
   │           └─ metadata/
   │              └─ description.md
   └─ state/
      └─ seed"
`;

exports[`App lifecycle > install app > should successfully install app and create expected directory structure 1`] = `
"/
├─ app-data/
│  └─ test/
│     └─ test/
│        ├─ app.env
│        └─ data/
└─ data/
   ├─ .env
   ├─ apps/
   │  └─ test/
   │     └─ test/
   │        ├─ config.json
   │        ├─ data/
   │        ├─ docker-compose.generated.yml
   │        ├─ docker-compose.json
   │        └─ metadata/
   │           └─ description.md
   ├─ backups/
   ├─ repos/
   │  └─ test/
   │     └─ apps/
   │        └─ test/
   │           ├─ config.json
   │           ├─ data/
   │           ├─ docker-compose.json
   │           └─ metadata/
   │              └─ description.md
   └─ state/
      └─ seed"
`;

exports[`App lifecycle > update all apps > should update multiple apps that have newer versions available 1`] = `
"/
├─ app-data/
│  └─ test/
│     ├─ app1/
│     │  ├─ app.env
│     │  └─ data/
│     ├─ app2/
│     │  ├─ app.env
│     │  └─ data/
│     └─ app3/
│        ├─ app.env
│        └─ data/
├─ data/
│  ├─ .env
│  ├─ apps/
│  │  └─ test/
│  │     ├─ app1/
│  │     │  ├─ config.json
│  │     │  ├─ data/
│  │     │  ├─ docker-compose.generated.yml
│  │     │  ├─ docker-compose.json
│  │     │  └─ metadata/
│  │     │     └─ description.md
│  │     ├─ app2/
│  │     │  ├─ config.json
│  │     │  ├─ data/
│  │     │  ├─ docker-compose.generated.yml
│  │     │  ├─ docker-compose.json
│  │     │  └─ metadata/
│  │     │     └─ description.md
│  │     └─ app3/
│  │        ├─ config.json
│  │        ├─ data/
│  │        ├─ docker-compose.generated.yml
│  │        ├─ docker-compose.json
│  │        └─ metadata/
│  │           └─ description.md
│  ├─ backups/
│  │  └─ test/
│  │     ├─ app1/
│  │     │  └─ app1-test-TIMESTAMP.tar.gz
│  │     └─ app3/
│  │        └─ app3-test-TIMESTAMP.tar.gz
│  ├─ repos/
│  │  └─ test/
│  │     └─ apps/
│  │        ├─ app1/
│  │        │  ├─ config.json
│  │        │  ├─ data/
│  │        │  ├─ docker-compose.json
│  │        │  └─ metadata/
│  │        │     └─ description.md
│  │        ├─ app2/
│  │        │  ├─ config.json
│  │        │  ├─ data/
│  │        │  ├─ docker-compose.json
│  │        │  └─ metadata/
│  │        │     └─ description.md
│  │        └─ app3/
│  │           ├─ config.json
│  │           ├─ data/
│  │           ├─ docker-compose.json
│  │           └─ metadata/
│  │              └─ description.md
│  └─ state/
│     └─ seed
└─ tmp/"
`;
